--- a/style.css
+++ b/style.css
@@ -72,21 +72,24 @@ header {
   align-items: center;
 }
 
-.right-header i {
+.right-header a {
   margin-right: 20px;
   font-size: 1.2rem;
+  text-decoration: none;
+  color: black;
 }
 
-.right-header i:hover, img:hover {
-  opacity: 0.7;
+.right-header i:hover,
+img:hover {
+  opacity: 0.3;
   cursor: pointer;
 }
 
-.right-header img, a {
+.right-header img,
+a {
   width: 1.2rem;
   height: 1.2rem;
 }
-
 
 /*
 ======================================
@@ -97,7 +100,7 @@ header {
 main {
   display: grid;
   grid-template-columns: 1fr 700px 1fr;
-  background-color: #2C3531;
+  background-color: #2c3531;
 }
 
 menu {
@@ -114,7 +117,7 @@ input {
   border-radius: 10px;
 }
 
- input:hover {
+input:hover {
   cursor: text;
 }
 
@@ -123,7 +126,7 @@ menu p {
   padding: 0;
   font-weight: 200;
   font-size: 1.3rem;
-  color: #D1E8E2;
+  color: #d1e8e2;
 }
 
 menu * {
@@ -135,8 +138,8 @@ menu button {
   background-color: #116466;
   border-radius: 30px;
   padding: 5px;
-  color: #D1E8E2;
-  font-family: 'Roboto';
+  color: #d1e8e2;
+  font-family: "Roboto";
 }
 
 menu button:hover {
@@ -151,24 +154,27 @@ menu button:hover {
 */
 
 .result {
+  overflow-y: scroll;
   grid-column: 2/4;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #D1E8E2;
+  background-color: #d1e8e2;
 }
 
+.result p {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  margin: 20px 10%;
+}
 .result h2 {
   margin: 20px 0 0 0;
 }
 
 .result #sanction {
-  margin: 10px 20px;  
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+  margin: 10px 20px;
 }
-
 
 /*
 ======================================
@@ -196,14 +202,13 @@ footer a:hover {
   justify-content: center;
   align-items: center;
   grid-column: 2/4;
-  background-color: #D9B08C;
+  background-color: #d9b08c;
   width: 100%;
   height: 100%;
 }
 
-
 .footer-l {
-  background-color: #2C3531;
+  background-color: #2c3531;
   grid-column: 1 / 2;
   width: 100%;
   height: 100%;
