--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ a {
 
 main {
   display: grid;
+  overflow-y: scroll;
   grid-template-columns: 1fr 700px 1fr;
   background-color: #2c3531;
 }
@@ -154,7 +155,6 @@ menu button:hover {
 */
 
 .result {
-  overflow-y: scroll;
   grid-column: 2/4;
   display: flex;
   flex-direction: column;
@@ -168,14 +168,30 @@ menu button:hover {
   font-style: normal;
   margin: 20px 10%;
 }
-.result h2 {
-  margin: 20px 0 0 0;
+.result * {
+  margin: 20px 10%;
 }
 
 .result #sanction {
   margin: 10px 20px;
 }
 
+.result span {
+  margin: 0;
+}
+
+.result button {
+  margin: 10px 10%;
+  padding: 5px;
+  background-color: #116466;
+  border-radius: 30px;
+  color: #d1e8e2;
+}
+
+.result button:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
 /*
 ======================================
 ===========FOOTER=============
