--- a/style.css
+++ b/style.css
@@ -106,11 +106,11 @@ main {
 
 menu {
   grid-column: 1 / 2;
-  justify-self: end;
   display: flex;
   flex-direction: column;
   border-right: 2px solid rgba(0, 0, 0, 0.3);
   padding-right: 10px;
+  width: 100%;
 }
 input {
   padding: 5px 40px;
@@ -123,7 +123,7 @@ input:hover {
 }
 
 menu p {
-  margin: 20px 0 0 0;
+  margin: 20px 0 0 20px;
   padding: 0;
   font-weight: 200;
   font-size: 1.3rem;
@@ -131,8 +131,7 @@ menu p {
 }
 
 menu * {
-  margin-right: 10px;
-  margin-top: 10px;
+  margin: 10px 20px 10px 20px;
 }
 
 menu button {
