--- a/style.css
+++ b/style.css
@@ -104,11 +104,14 @@ main {
   background-color: #2c3531;
 }
 
+main::-webkit-scrollbar {
+  display: none;
+}
+
 menu {
   grid-column: 1 / 2;
   display: flex;
   flex-direction: column;
-  border-right: 2px solid rgba(0, 0, 0, 0.3);
   padding-right: 10px;
   width: 100%;
 }
