--- a/style.css
+++ b/style.css
@@ -25,18 +25,9 @@ html {
 
 .outer-grid {
   display: grid;
+  grid-template-columns: 1fr 700px 1fr;
   grid-template-rows: 70px 1fr 40px;
-  grid-template-columns: 1fr;
   height: 100vh;
-}
-
-main {
-  grid-row: 2 / 3;
-  /* background-color: burlywood; */
-}
-
-footer {
-  grid-row: 3 / 4;
 }
 
 /*
@@ -47,6 +38,7 @@ footer {
 
 header {
   grid-row: 1 / 2;
+  grid-column: 1 / 4;
   background-color: #116466;
   display: grid;
   grid-template-columns: 1fr 700px 1fr;
@@ -93,27 +85,38 @@ a {
 
 /*
 ======================================
-===========MAIN=======================
+=========== LEFT INNER GRID ===============
 ======================================
 */
 
-main {
-  display: grid;
-  overflow-y: scroll;
-  grid-template-columns: 1fr 700px 1fr;
-  background-color: #2c3531;
+.left-inner-grid {
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
 }
+/*
+======================================
+=========== RIGHT INNER GRID =========
+======================================
+*/
 
-main::-webkit-scrollbar {
-  display: none;
+.right-inner-grid {
+  grid-column: 2 / 4;
+  grid-row: 2 / 3;
+  overflow: scroll;
 }
+/*
+======================================
+=========== MENU =====================
+======================================
+*/
 
 menu {
-  grid-column: 1 / 2;
   display: flex;
   flex-direction: column;
   padding-right: 10px;
   width: 100%;
+  height: 100%;
+  background-color: #2c3531;
 }
 input {
   padding: 5px 40px;
@@ -152,16 +155,31 @@ menu button:hover {
 
 /*
 ======================================
+=========== MAIN =====================
+======================================
+*/
+
+main {
+  background-color: #d1e8e2;
+  overflow-y: scroll;
+  width: 100%;
+  height: 100%;
+}
+
+main::-webkit-scrollbar {
+  display: none;
+}
+
+/*
+======================================
 ===========RESULT SECTION=============
 ======================================
 */
 
 .result {
-  grid-column: 2/4;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #d1e8e2;
 }
 
 .result p {
@@ -195,7 +213,8 @@ menu button:hover {
   opacity: 0.7;
 }
 
-.result div::-webkit-scrollbar {
+.result div::-webkit-scrollbar,
+.right-inner-grid::-webkit-scrollbar {
   display: none;
 }
 /*
@@ -204,10 +223,13 @@ menu button:hover {
 ======================================
 */
 footer {
-  display: grid;
+  grid-column: 2 / 4;
+  grid-row: 3 / 4;
+  background-color: #d9b08c;
+  display: flex;
   font-size: 0.9rem;
-  grid-template-columns: 1fr 700px 1fr;
-  grid-template-rows: 1fr;
+  justify-content: center;
+  align-items: center;
 }
 
 footer a {
@@ -217,21 +239,4 @@ footer a {
 
 footer a:hover {
   cursor: pointer;
-}
-
-.footer-r {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  grid-column: 2/4;
-  background-color: #d9b08c;
-  width: 100%;
-  height: 100%;
-}
-
-.footer-l {
-  background-color: #2c3531;
-  grid-column: 1 / 2;
-  width: 100%;
-  height: 100%;
 }
