--- a/style.css
+++ b/style.css
@@ -158,10 +158,10 @@ menu button:hover {
   display: flex;
   align-items: flex-end;
   margin: 10px 0 10px 0;
-  
 }
 
-.nation-choice > p, select {
+.nation-choice > p,
+select {
   margin: 0 0 0 20px;
 }
 
@@ -177,12 +177,10 @@ menu button:hover {
   font-family: "Roboto", sans-serif;
 }
 
-.nation-choice select:hover{
+.nation-choice select:hover {
   cursor: pointer;
   opacity: 0.8;
 }
-
-
 
 /*
 ======================================
@@ -221,6 +219,10 @@ main::-webkit-scrollbar {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
+}
+
+.result p > * {
+  margin: 0;
 }
 .result * {
   margin: 20px 10%;
